--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.41",
+    "gatsby": "^2.24.42",
     "gatsby-image": "^2.4.15",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.22",
@@ -18,6 +18,7 @@
     "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-sharp": "^2.5.12",
+    "gsap": "^3.4.2",
     "intersection-observer": "^0.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
